Uploading product and showing all done

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,18 @@
 <html>
     <head>
+      <link rel="stylesheet" type="text/css" href="style/gallery.css">
 <title>Third Project</title>
     </head>
     <body>
       <div w3-include-html="/layout/header.html"></div>
         <h1>Home page</h1>
-              <button id="logout">Log out</button>
+          <div id="images">
+            <div id="name"/>
+          </div>
 
 
-
-              <script src="./js/XHR.js"></script>
-              <script src="./js/loggedin.js"></script>
-              <script src="./js/w3.js"></script>
+          <script src="./js/XHR.js"></script>
+          <script src="./js/loggedin.js"></script>
+          <script src="./js/w3.js"></script>
   </body>
 </html>
