--- a/public/signup.html
+++ b/public/signup.html
@@ -7,19 +7,21 @@
       <div w3-include-html="/layout/header.html"></div>
       <div class="login-page">
         <h1> Sign up </h1>
-<form class="register-form">
-  <div class="form">
+        <form class="register-form">
+          <div class="form">
 
-  <input id="email" type="text" placeholder="name"/>
-  <input id="password" type="password" placeholder="password"/>
-  <input type="text" placeholder="email address"/>
-  <button id="signup" onclick="new_account()">create</button>
-  <p class="message">Already registered? <a href="./login.html">Sign In</a></p>
-</form>
-</div>
-</div>
-       <script src="./js/XHR.js"></script>
-       <script src="./js/request.js"></script>
-       <script src="./js/w3.js"></script>
+            <input id="name" type="text" placeholder="username"/>
+            <input id="email" type="text" placeholder="email address"/>
+            <input id="password" type="password" placeholder="password"/>
+            <button id="signup" onclick="new_account()">create</button>
+            <p class="message">Already registered?
+              <a href="./login.html">Sign In </a>
+            </p>
+          </div>
+        </form>
+      </div>
+     <script src="./js/XHR.js"></script>
+     <script src="./js/request.js"></script>
+     <script src="./js/w3.js"></script>
    </body>
 </html>
