--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
 <html>
     <head>
-      <link rel="stylesheet" type="text/css" href="style/gallery.css">
-<title>Third Project</title>
+      <link rel="stylesheet" type="text/css" href="style/login.css">
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <title>Third project</title>
     </head>
     <body>
       <div w3-include-html="/layout/header.html"></div>
-        <h1>Home page</h1>
+        <h1><div id='title'>All products</div></h1>
           <div id="images">
-            <div id="name"/>
           </div>
 
+          <div id="edit" style="display: none;" class="login-page">
+            <form class="login-form">
+              <div class="form">
+                 <input id="price" type="number" placeholder="price"></input>
+                 <input id="name" type="text" placeholder="name"></input>
+                 <button id="update">Edit</button>
+               </div>
+             </form>
+           </div>
 
           <script src="./js/XHR.js"></script>
           <script src="./js/loggedin.js"></script>
