project done details left

--- a/public/cart.html
+++ b/public/cart.html
@@ -11,8 +11,10 @@
     <body>
       <div w3-include-html="/layout/header.html"></div>
 
+      <div id="products"/>
+
       <script src="./js/XHR.js"></script>
       <script src="./js/w3.js"></script>
-      <script src="./js/load.js"></script>
+      <script src="./js/show_cart.js"></script>
     </body>
 </html>
