--- a/public/upload.html
+++ b/public/upload.html
@@ -15,6 +15,7 @@
         <h1> Upload a product </h1>
          <form class="login-form">
            <div class="form">
+              <input id="name" type="text" placeholder="name"></input>
               <input id="price" type="number" placeholder="price"></input>
               <input id="file" type="file"></input>
               <button id="sendFile">Upload</button>
