--- a/public/login.html
+++ b/public/login.html
@@ -1,25 +1,28 @@
 <html>
     <head>
       <link rel="stylesheet" type="text/css" href="style/login.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
         <title>Third project</title>
     </head>
     <body>
-      <div w3-include-html="/layout/header.html"></div>
-      <div class="login-page">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <a class="navbar-brand" href="#">Project #3</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </nav>
+        <div class="login-page">
         <h1> Log in </h1>
- <form class="login-form">
-   <div class="form">
-
-    </form>
-   <input id="email" type="text" placeholder="username"/>
-   <input id="password" type="password" placeholder="password"/>
-   <button id='login' onclick="session()">login</button>
-   <p class="message">Not registered? <a href="./signup.html">Create an account</a></p>
- </form>
-</div>
-</div>
-        <script src="./js/XHR.js"></script>
-        <script src="./js/request.js"></script>
-        <script src="./js/w3.js"></script>
+        <form class="login-form">
+           <div class="form">
+           <input id="email" type="text" placeholder="username"/>
+           <input id="password" type="password" placeholder="password"/>
+           <button id='login' onclick="session()">login</button>
+           <p class="message">Not registered? <a href="./signup.html">Create an account</a></p>
+          </div>
+        </form>
+      </div>
+      <script src="./js/XHR.js"></script>
+      <script src="./js/request.js"></script>
     </body>
 </html>
