--- a/public/signup.html
+++ b/public/signup.html
@@ -13,7 +13,7 @@
             <input id="name" type="text" placeholder="username"/>
             <input id="email" type="text" placeholder="email address"/>
             <input id="password" type="password" placeholder="password"/>
-            <button id="signup" onclick="new_account()">create</button>
+            <button id="signup">create</button>
             <p class="message">Already registered?
               <a href="./login.html">Sign In </a>
             </p>
@@ -21,7 +21,7 @@
         </form>
       </div>
      <script src="./js/XHR.js"></script>
-     <script src="./js/request.js"></script>
+     <script src="./js/signup.js"></script>
      <script src="./js/w3.js"></script>
    </body>
 </html>
