--- a/public/signup.html
+++ b/public/signup.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+      <link rel="stylesheet" type="text/css" href="style/login.css">
         <title>Third project</title>
     </head>
     <body>
