login & signup error

--- a/public/signup.html
+++ b/public/signup.html
@@ -4,7 +4,9 @@
         <title>Third project</title>
     </head>
     <body>
-      <div w3-include-html="/layout/header.html"></div>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Project #3</a>
+      </nav>
       <div class="login-page">
         <h1> Sign up </h1>
         <form class="register-form">
@@ -22,6 +24,5 @@
       </div>
      <script src="./js/XHR.js"></script>
      <script src="./js/signup.js"></script>
-     <script src="./js/w3.js"></script>
    </body>
 </html>
