--- a/public/signup.html
+++ b/public/signup.html
@@ -1,6 +1,7 @@
 <html>
     <head>
       <link rel="stylesheet" type="text/css" href="style/login.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
         <title>Third project</title>
     </head>
     <body>
@@ -15,10 +16,8 @@
             <input id="name" type="text" placeholder="username"/>
             <input id="email" type="text" placeholder="email address"/>
             <input id="password" type="password" placeholder="password"/>
-            <button id="signup">create</button>
-            <p class="message">Already registered?
-              <a href="./login.html">Sign In </a>
-            </p>
+            <button id='signup'>create</button>
+            <p class="message">Already registered? <a href="./login.html">Sign In </a></p>
           </div>
         </form>
       </div>
