--- a/public/login.html
+++ b/public/login.html
@@ -14,7 +14,7 @@
            <div class="form">
            <input id="email" type="text" placeholder="username"/>
            <input id="password" type="password" placeholder="password"/>
-           <button id='login' onclick="session()">login</button>
+           <button id="login">login</button>
            <p class="message">Not registered? <a href="./signup.html">Create an account</a></p>
           </div>
         </form>
