--- a/public/signup.html
+++ b/public/signup.html
@@ -16,7 +16,7 @@
             <input id="name" type="text" placeholder="username"/>
             <input id="email" type="text" placeholder="email address"/>
             <input id="password" type="password" placeholder="password"/>
-            <button id='signup'>create</button>
+            <button id="signup">create</button>
             <p class="message">Already registered? <a href="./login.html">Sign In </a></p>
           </div>
         </form>
