--- a/public/signup.html
+++ b/public/signup.html
@@ -1,27 +1,28 @@
 <html>
     <head>
-      <link rel="stylesheet" type="text/css" href="style/login.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+      <link rel="stylesheet" type="text/css" href="style/login.css">
         <title>Third project</title>
     </head>
     <body>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Project #3</a>
-      </nav>
+      <div w3-include-html="/layout/header.html"></div>
       <div class="login-page">
         <h1> Sign up </h1>
         <form class="register-form">
           <div class="form">
 
-            <input id="name" type="text" placeholder="username"/>
-            <input id="email" type="text" placeholder="email address"/>
+            <input id="username" type="text" placeholder="username"/>
+            <input id="email" type="email" placeholder="email address"/>
             <input id="password" type="password" placeholder="password"/>
             <button id="signup">create</button>
-            <p class="message">Already registered? <a href="./login.html">Sign In </a></p>
+            <p class="message">Already registered?
+              <a href="./login.html">Sign In </a>
+            </p>
           </div>
         </form>
       </div>
      <script src="./js/XHR.js"></script>
      <script src="./js/signup.js"></script>
+     <script src="./js/w3.js"></script>
    </body>
 </html>
