--- a/public/cart.html
+++ b/public/cart.html
@@ -10,9 +10,9 @@
     </head>
     <body>
       <div w3-include-html="/layout/header.html"></div>
-
+      <h1>Cart</h1>
       <div id="products"/>
-
+      <button id="send_card">ENVIAR PEDIDO</button>
       <script src="./js/XHR.js"></script>
       <script src="./js/w3.js"></script>
       <script src="./js/show_cart.js"></script>
