--- a/public/login.html
+++ b/public/login.html
@@ -10,14 +10,14 @@
         </nav>
         <div class="login-page">
         <h1> Log in </h1>
-        <form class="login-form">
+        <div class="login-form">
            <div class="form">
            <input id="email" type="text" placeholder="username"/>
            <input id="password" type="password" placeholder="password"/>
            <button id="login">login</button>
            <p class="message">Not registered? <a href="./signup.html">Create an account</a></p>
           </div>
-        </form>
+        </div>
       </div>
       <script src="./js/XHR.js"></script>
       <script src="./js/request.js"></script>
