fixing signup bug

--- a/public/signup.html
+++ b/public/signup.html
@@ -8,7 +8,7 @@
       <div w3-include-html="/layout/header.html"></div>
       <div class="login-page">
         <h1> Sign up </h1>
-        <form class="register-form">
+        <div class="register-form">
           <div class="form">
 
             <input id="username" type="text" placeholder="username"/>
@@ -19,7 +19,7 @@
               <a href="./login.html">Sign In </a>
             </p>
           </div>
-        </form>
+        </div>
       </div>
      <script src="./js/XHR.js"></script>
      <script src="./js/signup.js"></script>
