--- a/public/upload.html
+++ b/public/upload.html
@@ -13,14 +13,14 @@
       <div w3-include-html="/layout/header.html"></div>
       <div class="login-page">
         <h1> Upload a product </h1>
-         <form class="login-form">
+         <div class="login-form">
            <div class="form">
               <input id="name" type="text" placeholder="name"></input>
               <input id="price" type="number" placeholder="price"></input>
               <input id="file" type="file"></input>
               <button id="sendFile">Upload</button>
             </div>
-          </form>
+          </div>
         </div>
       <script src="./js/XHR.js"></script>
       <script src="./js/w3.js"></script>
