email almost done

--- a/public/login.html
+++ b/public/login.html
@@ -2,20 +2,20 @@
     <head>
       <link rel="stylesheet" type="text/css" href="style/login.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-        <title>Third project</title>
+        <title>Project</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <a class="navbar-brand" href="#">Project #3</a>
         </nav>
         <div class="login-page">
-        <h1> Log in </h1>
+        <h1> Iniciar sesion </h1>
         <div class="login-form">
            <div class="form">
-           <input id="email" type="text" placeholder="username"/>
-           <input id="password" type="password" placeholder="password"/>
-           <button id="login">login</button>
-           <p class="message">Not registered? <a href="./signup.html">Create an account</a></p>
+           <input id="email" type="text" placeholder="email"/>
+           <input id="password" type="password" placeholder="contrasena"/>
+           <button id="login">iniciar sesion</button>
+           <p class="message">No estas registrado? <a href="./signup.html">Crear una cuenta</a></p>
           </div>
         </div>
       </div>
