--- a/public/signup.html
+++ b/public/signup.html
@@ -2,21 +2,23 @@
     <head>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="style/login.css">
-        <title>Third project</title>
+        <title>Project</title>
     </head>
     <body>
       <div w3-include-html="/layout/header.html"></div>
       <div class="login-page">
-        <h1> Sign up </h1>
+        <h1> Registrate </h1>
         <div class="register-form">
           <div class="form">
 
-            <input id="username" type="text" placeholder="username"/>
-            <input id="email" type="email" placeholder="email address"/>
-            <input id="password" type="password" placeholder="password"/>
-            <button id="signup">create</button>
-            <p class="message">Already registered?
-              <a href="./login.html">Sign In </a>
+            <input id="username" type="text" placeholder="usuario"/>
+            <input id="email" type="email" placeholder="email"/>
+            <input id="name" type="text" placeholder="nombre"/>
+            <input id="lastname" type="text" placeholder="apellido"/>
+            <input id="password" type="password" placeholder="contrasena"/>
+            <button id="signup">crear</button>
+            <p class="message">Ya estas registrado?
+              <a href="./login.html">Inicia sesion </a>
             </p>
           </div>
         </div>
