--- a/public/order.html
+++ b/public/order.html
@@ -1,1 +1,19 @@
-<h1>test</h1>
+<!DOCTYPE html>
+<html lang="en">
+<html>
+    <head>
+      <link rel="stylesheet" type="text/css" href="style/login.css">
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <title>Third project</title>
+    </head>
+    <body>
+      <div w3-include-html="/layout/header.html"></div>
+      <h1>Ordenes</h1>
+      <div id="order"/>
+      <script src="./js/XHR.js"></script>
+      <script src="./js/w3.js"></script>
+      <script src="./js/show_orders.js"></script>
+    </body>
+</html>
