--- a/public/login.html
+++ b/public/login.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="#">Project #3</a>
+          <a class="navbar-brand" href="./index.html">Project</a>
         </nav>
         <div class="login-page">
         <h1> Iniciar sesion </h1>
