--- a/public/new.html
+++ b/public/new.html
@@ -24,6 +24,8 @@
         </div>
       <script src="./js/XHR.js"></script>
       <script src="./js/w3.js"></script>
+      <script src="./js/check_header.js"></script>
+      <script src="./js/check_session.js"></script>
       <script src="./js/new_order.js"></script>
     </body>
 </html>
