--- a/public/cart.html
+++ b/public/cart.html
@@ -15,6 +15,7 @@
       <button id="send_card">ENVIAR PEDIDO</button>
       <script src="./js/XHR.js"></script>
       <script src="./js/w3.js"></script>
+      <script src="./js/check_header.js"></script>
       <script src="./js/show_cart.js"></script>
     </body>
 </html>
