--- a/public/order.html
+++ b/public/order.html
@@ -14,6 +14,8 @@
       <div id="order"/>
       <script src="./js/XHR.js"></script>
       <script src="./js/w3.js"></script>
-      <script src="./js/show_orders.js"></script>
+      <script src="./js/check_header.js"></script>
+      <script src="./js/check_session.js"></script>
+      <script src="./js/orders.js"></script>
     </body>
 </html>
