--- a/public/signup.html
+++ b/public/signup.html
@@ -5,7 +5,9 @@
         <title>Project</title>
     </head>
     <body>
-      <div w3-include-html="/layout/header.html"></div>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="./index.html">Project</a>
+      </nav>
       <div class="login-page">
         <h1> Registrate </h1>
         <div class="register-form">
