--- a/public/upload.html
+++ b/public/upload.html
@@ -23,7 +23,8 @@
           </div>
         </div>
       <script src="./js/XHR.js"></script>
-      <script src="./js/w3.js"></script>
       <script src="./js/load.js"></script>
+      <script src="./js/w3.js"></script>
+      <script src="./js/check_header.js"></script>
     </body>
 </html>
