showing all orders

--- a/public/order.html
+++ b/public/order.html
@@ -11,11 +11,10 @@
     <body>
       <div w3-include-html="/layout/header.html"></div>
       <h1>Ordenes</h1>
-      <div id="order"/>
       <script src="./js/XHR.js"></script>
       <script src="./js/w3.js"></script>
       <script src="./js/check_header.js"></script>
-      <script src="./js/check_session.js"></script>
+    <!--  <script src="./js/check_session.js"></script> -->
       <script src="./js/orders.js"></script>
     </body>
 </html>
