--- a/public/order.html
+++ b/public/order.html
@@ -11,6 +11,8 @@
     <body>
       <div w3-include-html="/layout/header.html"></div>
       <h1>Ordenes</h1>
+      <table id="table" border="3" style="width: 100%;"></table>
+      <div id="test"></div>
       <script src="./js/XHR.js"></script>
       <script src="./js/w3.js"></script>
       <script src="./js/check_header.js"></script>
